--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: "apis-plumber"
+book_filename: "api-plumber"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: "Capitulo "
